// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton Renders 1`] = `
[
  <button
    class="sc-bdfCDU gPECCf lagom-button lagom-button--secondary"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders primary 1`] = `
[
  <button
    class="sc-bdfCDU gPECCf lagom-button lagom-button--primary"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders secondary 1`] = `
[
  <button
    class="sc-bdfCDU gPECCf lagom-button lagom-button--secondary"
  >
    Text
  </button>,
]
`;
